src/popup/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .no-scrollbar {
    /* 隐藏 Chrome, Safari 和 Opera 的滚动条 */
    &::-webkit-scrollbar {
      display: none;
    }
    /* 隐藏 IE, Edge 和 Firefox 的滚动条 */
    -ms-overflow-style: none; /* IE 和 Edge */
    scrollbar-width: none; /* Firefox */
  }
}

:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 20px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #4a4a4a;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

/* input:focus, .ant-input-affix-wrapper-focused {
  box-shadow: 0 0 0 2px #4a4a4a15 !important;
} */

/* a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
} */

.ant-tabs .ant-tabs-content, 
.ant-tabs .ant-tabs-tabpane{
  height: 100%;
}

